--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,41 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # 地图相关
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+
+  # GPS定位
+  geolocator: ^12.0.0
+  location: ^6.0.2
+
+  # HTTP请求
+  http: ^1.2.2
+  dio: ^5.7.0
+
+  # 状态管理
+  provider: ^6.1.2
+
+  # 本地存储
+  shared_preferences: ^2.3.2
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+
+  # 后台服务 - 暂时移除，避免编译问题
+  # workmanager: ^0.5.2
+  # flutter_background_service: ^5.0.10
+
+  # 权限管理
+  permission_handler: ^11.3.1
+
+  # UI组件
+  flutter_spinkit: ^5.2.1
+  fluttertoast: ^8.2.8
+
+  # 工具类
+  uuid: ^4.5.1
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
